10171
Another example from Akka, as reported in scala/bug#8673:
```scala
tmp$ scala
Welcome to Scala version 2.11.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_05).
Type in expressions to have them evaluated.
Type :help for more information.
 
scala> import akka.actor._
import akka.actor._
 
scala> import akka.pattern._
import akka.pattern._
 
scala> import scala.concurrent._
import scala.concurrent._
 
scala> val system = ActorSystem()
system: akka.actor.ActorSystem = akka://default
 
scala> Future.successful("WAT") pipeTo system.deadLetters
<console>:18: error: value pipeTo is not a member of scala.concurrent.Future[String]
              Future.successful("WAT") pipeTo system.deadLetters
                                       ^
```
